# ctalearn

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.claude/rules/: google-style.md
.github/workflows/: ci.yml  docs.yml
ctalearn/: __init__.py
ctalearn/core/: dataframe.py
ctalearn/data/: __init__.py  _fetch.py
ctalearn/dsl/: __init__.py  analyzer.py  exceptions.py  grammar.lark  interpreter.py  library.py  parser.py  schema.py
ctalearn/metrics/: __init__.py  _performance_metrics.py
ctalearn/operator/: __init__.py  _arithmetic.py  _cross_sectional.py  _strategy.py  _time_series.py  _utils.py
ctalearn/preprocess/: __init__.py  _split.py
ctalearn/testing/: __init__.py  dataframe.py
docs/: dsl.md  index.md
docs/api/: data.md  dataframe.md  dsl.md  metrics.md  operators.md  preprocess.md  testing.md
examples/: dsl_interpreter.py
tests/: conftest.py
tests/core/: test_dataframe.py
tests/data/: test_fetch.py
tests/dsl/: fixtures.py  test_analyzer.py  test_interpreter.py  test_library.py  test_parser.py
tests/metrics/: test_performance_metrics.py
tests/operator/: test_arithmetic.py  test_cross_sectional.py  test_strategy.py  test_time_series.py  test_utils.py
tests/preprocess/: test_split.py
tests/testing/: test_dataframe.py
