[project]
name = "ctalearn"
version = "0.1.1"
description = "A cross-sectional / time-series alpha research toolkit for CTA strategies"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Ting-Hsuan Huang", email = "felixhuang07@gmail.com" }]
keywords = [
    "alpha",
    "quant",
    "trading",
    "backtesting",
    "cross-sectional",
    "time-series",
    "factor",
    "polars",
    "cta",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.16.2",
    "httpx>=0.28.1",
    "polars>=1.34.0",
    "numba>=0.62.1",
    "lark>=1.3.1",
]

[project.urls]
"Homepage" = "https://github.com/fffelix-huang/ctalearn"
"Documentation" = "https://fffelix-huang.github.io/ctalearn/"
"Repository" = "https://github.com/fffelix-huang/ctalearn"
"Issues" = "https://github.com/fffelix-huang/ctalearn/issues"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["I"]
ignore = [
    "F405",
    "E722",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.report]
# Numba-compiled functions run as machine code, so coverage can't trace their
# bodies. They are behavior-tested instead; exclude them from line coverage.
exclude_also = [
    "@(numba\\.)?njit",
]

[tool.mypy]
python_version = "3.11"
files = ["ctalearn", "tests"]
strict = true
follow_imports = "silent"
explicit_package_bases = true
namespace_packages = true

# Third-party libs without stubs
[[tool.mypy.overrides]]
module = [
    "numba",
    "numba.*",
    "lark",
    "lark.*",
    "scipy",
    "scipy.*",
    "sklearn",
    "sklearn.*",
]
ignore_missing_imports = true


[tool.uv]
default-groups = ["dev", "test"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.5.1",
    "ruff>=0.13.3",
]
docs = [
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
]
test = [
    "pytest>=8.4.1",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=6.2.1",
    "scikit-learn>=1.8.0",
]

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ctalearn*"]

[tool.setuptools.package-data]
ctalearn = ["dsl/*.lark", "py.typed"]
